syntax = "proto3";

option java_package = "org.rumel";

service user {
  rpc Register(RegistrationRequest) returns (RegistrationResponse);
  rpc Login(LoginRequest) returns (Response);
  rpc Logout(LogoutRequest) returns (Response);
  rpc CreateProfile(ProfileRequest) returns (ProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileResponse);
  rpc ShowUserProfile(ShowUserProfileRequest) returns (ShowUserProfileResponse);
}


message RegistrationRequest {
  string username = 1;
  string password = 2;
}

message RegistrationResponse {
  int32 responseCode = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message Response {
  int32 responseCode = 1;
  string message = 2;
}

message LogoutRequest {}

message ProfileRequest {
  string username = 1;
  string fullName = 2;
  string email = 3;

}

message UpdateProfileRequest {
  string username = 1;
  string fullName = 2;
  string email = 3;

}

message ProfileResponse {
  int32 responseCode = 1;
  string message = 2 ;
}

message ShowUserProfileRequest {
  string username = 1;
}

message ShowUserProfileResponse {
  int32 responseCode = 1;
  string username = 2;
  string fullName = 3;
  string email = 4;
}
